--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -72,3 +72,28 @@ stages:
 
         - publish: '$(Build.ArtifactStagingDirectory)'
           artifact: drop
+
+  - stage: Deploy
+    displayName: Deploy the web application
+    dependsOn: Build
+    jobs:
+      - deployment: Deploy
+        pool:
+          vmImage: 'ubuntu-22.04'
+        environment: dev
+        variables:
+          group: Release
+        strategy:
+          runOnce:
+            deploy:
+              steps:
+                - download: current
+                  artifact: drop
+                - task: AzureWebApp@1
+                  displayName: "Azure App Service Deploy: website"
+                  inputs:
+                    azureSubscription: Visual Studio Professional-prenumeration
+                    appName: '$(WebAppName)'
+                    appType: webAppLinux
+                    package: '$(Pipeline.Workspace)/drop/$(buildConfiguration)/*.zip'
+
