--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -92,7 +92,7 @@ stages:
                 - task: AzureWebApp@1
                   displayName: "Azure App Service Deploy: website"
                   inputs:
-                    azureSubscription: Visual Studio Professional-prenumeration
+                    azureSubscription: Resource Manager - Tailspin - Space Game
                     appName: '$(WebAppName)'
                     appType: webAppLinux
                     package: '$(Pipeline.Workspace)/drop/$(buildConfiguration)/*.zip'
