--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,8 +8,7 @@ trigger:
 
 variables:
   buildConfiguration: 'Release'
-  wwwrootDir: 'Tailspin.SpaceGame.Web/wwwroot'
-  dotnetSdkVersion: '6.x'
+  system.debug: true
 
 stages:
   - stage: 'Build'
