Lets skip variables groups for now

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -87,13 +87,13 @@ stages:
           runOnce:
             deploy:
               steps:
-                - download: current
-                  artifact: drop
-                - task: AzureWebApp@1
-                  displayName: "Azure App Service Deploy: website"
-                  inputs:
-                    azureSubscription: Resource Manager - Tailspin - Space Game
-                    appName: $(WebAppName)
-                    appType: webAppLinux
-                    package: '$(Pipeline.Workspace)/drop/$(buildConfiguration)/*.zip'
+              - download: current
+                artifact: drop
+              - task: AzureWebApp@1
+                displayName: "Azure App Service Deploy: website"
+                inputs:
+                  azureSubscription: Resource Manager - Tailspin - Space Game
+                  appName: tailspin-space-game-web-1337
+                  appType: webAppLinux
+                  package: '$(Pipeline.Workspace)/drop/$(buildConfiguration)/*.zip'
 
