--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -93,7 +93,7 @@ stages:
                 displayName: "Azure App Service Deploy: website"
                 inputs:
                   azureSubscription: Resource Manager - Tailspin - Space Game
-                  appName: $(WebAppName)
+                  appName: tailspin-space-game-1337
                   appType: webAppLinux
                   package: '$(Pipeline.Workspace)/drop/$(buildConfiguration)/*.zip'
 
