--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,6 +8,7 @@ trigger:
 
 variables:
   buildConfiguration: 'Release'
+  releaseBranchName: 'release'
   system.debug: true
 
 stages:
@@ -73,9 +74,15 @@ stages:
           displayName: 'Publish Artifact: drop'
           condition: succeeded()
 
-  - stage: Deploy
-    displayName: Deploy the web application
+  - stage: Dev
+    displayName: Deploy to the dev environment
     dependsOn: Build
+    condition: |
+      and
+      (
+        succeeded(),
+        eq(variables['Build.SourceBranchName'], variables['releaseBranchName'])
+      )
     jobs:
       - deployment: Deploy
         pool:
@@ -93,7 +100,7 @@ stages:
                 displayName: "Azure App Service Deploy: website"
                 inputs:
                   azureSubscription: Resource Manager - Tailspin - Space Game
-                  appName: tailspin-space-game-1337
+                  appName: $(WebAppName)
                   appType: webAppLinux
                   package: '$(Pipeline.Workspace)/drop/$(buildConfiguration)/*.zip'
 
